--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
-        "prettus/l5-repository": "^2.6",
-        "laravel/passport": "^2.0.1"
+        "laravel/passport": "^2.0.1",
+        "laravelcollective/html": "^5.4",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
